k8s/overlays/dev/result/v1_namespace_dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: gitops
    app.kubernetes.io/name: gitops
    istio-injection: disabled
  name: dev
