k8s/overlays/dev/result/argoproj.io_v1alpha1_rollout_gitops-rollout-dev.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: gitops
    app.kubernetes.io/name: gitops
  name: gitops-rollout-dev
  namespace: dev
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gitops
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause:
          duration: 60s
      - setWeight: 30
      - pause:
          duration: 120s
      - setWeight: 50
      - pause:
          duration: 180s
      - setWeight: 100
  template:
    metadata:
      labels:
        app: gitops
    spec:
      containers:
      - image: marcoscianci/gitops:dev_17786360950
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8282
          initialDelaySeconds: 10
          periodSeconds: 10
        name: myapp
        ports:
        - containerPort: 8282
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8282
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
