k8s/overlays/dev/result/v1_service_gitops-myapp-canary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops
    app.kubernetes.io/name: gitops
  name: gitops-myapp-canary
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8282
  selector:
    app: gitops
    app.kubernetes.io/name: gitops
  type: ClusterIP
